add-zip files instead of mass download

--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
 
 			<p>
 				<label for="width">Columns:</label>
-				<input id="width" type="number" name="width" value="20" min="3" max="200">
+				<input id="width" type="number" name="width" value="10" min="3" max="200">
 			</p>
 
 			<p>
 				<label for="height">Rows:</label>
-				<input id="height" type="number" name="height" value="20" min="3" max="200">
+				<input id="height" type="number" name="height" value="10" min="3" max="200">
 			</p>
 			<p>
 				<label for="entry">Maze entries:</label>
@@ -201,5 +201,8 @@
 		<script type="text/javascript" src="src/app.js"></script>
 		<script type="text/javascript" src="src/human-colours-en-gb.js"></script>
 		<script type="text/javascript" src="src/color-picker.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.2/jspdf.umd.min.js"></script>
 	</body>
 </html>
