--- a/index.html
+++ b/index.html
@@ -140,6 +140,19 @@
 				</select>
 			</p>
 			<p>
+				<label for="difficulty">Maze entries:</label>
+				<select id="difficulty" name="difficulty">
+					<option value="">none</option>
+					<option value="amateur">amateur</option>
+					<option value="novice" selected="selected">novice</option>
+					<option value="mild">mild</option>
+					<option value="moderate">moderate</option>
+					<option value="advanced">advanced</option>
+					<option value="difficult">difficult</option>
+					<option value="master">master</option>
+				</select>
+			</p>
+			<p>
 				<label for="num-mazes">Number of Mazes:</label>
 				<input id="num-mazes" type="number" name="num-mazes" value="1" min="1">
 			</p>
