add-numbers above and difficutly below unsolved mazes

--- a/index.html
+++ b/index.html
@@ -140,16 +140,16 @@
 				</select>
 			</p>
 			<p>
-				<label for="difficulty">Maze entries:</label>
+				<label for="difficulty">Difficulty:</label>
 				<select id="difficulty" name="difficulty">
-					<option value="">none</option>
-					<option value="amateur">amateur</option>
-					<option value="novice" selected="selected">novice</option>
-					<option value="mild">mild</option>
-					<option value="moderate">moderate</option>
-					<option value="advanced">advanced</option>
-					<option value="difficult">difficult</option>
-					<option value="master">master</option>
+					<option value="" selected="selected">none</option>
+					<option value="Amateur">Amateur</option>
+					<option value="Novice">Novice</option>
+					<option value="Mild">Mild</option>
+					<option value="Moderate">Moderate</option>
+					<option value="Advanced">Advanced</option>
+					<option value="Difficult">Difficult</option>
+					<option value="Master">Master</option>
 				</select>
 			</p>
 			<p>
