--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
 				<input id="delay" type="number" name="delay" value="100" min="100">
 			</p>
 			<p>
+				<label for="num-start">Starting Maze Number:</label>
+				<input id="num-start" type="number" name="num-start" value="1" min="1">
+			</p>
+			<p>
 				<label for="bias">Bias:</label>
 				<select id="bias" name="bias">
 					<option value="">none</option>
